raffia/tests/error/scss/value/function-call/too-many-arbitrary-args.snap
---
source: raffia/tests/error.rs
---
error: expect token `)`, but `,` received
  ┌─ too-many-arbitrary-args.scss:2:22
  │
2 │   width: min($arr1..., $arr2...);
  │                      ^


